--- a/styles.css
+++ b/styles.css
@@ -168,7 +168,25 @@ footer{
   padding: .8rem 1.2rem 0;
 }
 
+.about-img{
+  display: inline-block;
+  width: 300px;
+  height: 300px;
+  background:
+  url("https://images.unsplash.com/photo-1542990253-a781e04c0082?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1994&q=80");
+  background-position: bottom;
+  background-size: cover;
+  /* margin: auto; */
+}
 
+.about-content {
+  display: grid;
+  grid-template-columns: 1fr 2fr;
+}
+
+.about-content>div:nth-child(2) {
+  padding-left: 1rem;
+}
 
 /* utility classes --- overwriting the bootstrap*/
 
@@ -186,10 +204,33 @@ dl, ol, ul {
   padding: 0 .5rem;
 }
 
+/* Products section */
+.card {
+  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+  transition: 0.3s;
+  max-width: 200px;
+}
+
+.card:hover {
+  box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+}
+.nbt-card-container{
+  display: flex;
+  justify-content: space-around;
+  flex-wrap: wrap;
+}
+
+
+/* services */
+svg {
+  width: 50px;
+  height: 50px;
+  display: inline-block;
+}
 
 /* media query */
 
-@media (max-width: 600px) {
+@media (max-width: 800px) {
   #header-img{
     width: 150px;
   }
@@ -217,6 +258,23 @@ dl, ol, ul {
   #header-img{
     margin: 0 auto ;
   }
+
+  .about-content>div:nth-child(1) {
+    display: flex;
+    justify-content: center;
+    justify-items: center;
+  }
+
+  .about-content>div:nth-child(2) {
+    padding-top: 1.5rem;
+  }
+  
+  .about-content {
+    display: block;
+    margin: auto;
+  }
+  
+
 }
 /* for landscape phone */
 @media (max-height: 400px) {
